fix some bug like overflow

--- a/media.css
+++ b/media.css
@@ -71,26 +71,3 @@
 }
 
 
-@media screen and (min-width: 576px) {
-    .carousel-inner {
-        display: flex;
-        width: 90%;
-        margin-inline: auto;
-        padding: 1em 0;
-        overflow: hidden;
-    }
-
-    .carousel-item {
-        display: block;
-        margin-right: 0;
-        flex: 0 0 calc(100% / 2);
-    }
-}
-
-@media screen and (min-width: 768px) {
-    .carousel-item {
-        display: block;
-        margin-right: 0;
-        flex: 0 0 calc(100% / 3);
-    }
-}
